--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,35 +1,23 @@
 <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-primary">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand" href="#">MyShop <img src="../../../assets/shoppingIcon.png" alt=""> </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" (click)="toggleCollapsed()"  aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
   
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent" [ngClass]="{'collapse': collapsed, 'navbar-collapse': true}">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
+          <a routerLink="" class="nav-link" >Home</a>
         </li>
       </ul>
+      
+      <div class="container justify-content-center bar">
+       
       <form class="form-inline search-bar">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
+        <input [(ngModel)]="keyword" name="keyword" class="form-control mr-sm-2" #search type="text" placeholder="Search" aria-label="Search">
+        <button [routerLink]="['/Search',keyword]" class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
       </form>
+        <button routerLink="AddProducts" class="btn btn-success my-2 my-sm-0">Add or Update Products</button>
+      </div>
     </div>
   </nav>
