--- a/src/app/components/laptops-list/laptops-list.component.html
+++ b/src/app/components/laptops-list/laptops-list.component.html
@@ -8,18 +8,18 @@
                 </div>
                
                 <div class="card-body">
-                  <h5 class="card-title">{{list.name}}</h5>
+                  <h3 class="card-title">{{list.name}}</h3>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
                 <ul class="list-group list-group-flush">
-                  <li class="list-group-item">{{list.price}}</li>
-                  <li class="list-group-item">{{list.ram}}</li>
-                  <li class="list-group-item">{{list.rom}}</li>
-                  <li class="list-group-item">{{list.screenSize}}</li>
+                  <li class="list-group-item">Price - {{list.price}}</li>
+                  <li class="list-group-item">RAM - {{list.ram}}</li>
+                  <li class="list-group-item">HDD - {{list.rom}}</li>
+                  <li class="list-group-item">Screen Size - {{list.screenSize}}</li>
                 </ul>
                 <div class="card-body">
-                  <a href="#" class="card-link">Card link</a>
-                  <a href="#" class="card-link">Another link</a>
+                  <a href="#" class="card-link">Buy Now</a>
+                  <a href="#" class="card-link">Add to Cart</a>
                 </div>
               </div>
         
