--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -1,4 +1,15 @@
 .sidebar{
-    
-    margin-top: 100px;
+   color: aliceblue;
+    padding: 20px;
+    position: fixed;
+}
+.sidebar button{
+    width: 140px;
+}
+.links{
+    color: white;
+    margin-top: 40px;
+}
+a{
+    color: white;
 }
